@@ -30,8 +30,12 @@ namespace Mono.Cecil {
 
 	public sealed class PointerType : TypeSpecification, IPointerType {
 
+		public override string Name {
+			get { return string.Concat (base.Name, "*"); }
+		}
+
 		public override string FullName {
-			get { return string.Concat (this.ElementType.FullName, "*"); }
+			get { return string.Concat (base.FullName, "*"); }
 		}
 
 		public PointerType (TypeReference pType) : base (pType)
